# Mevzubase

./: .gitignore  GEMINI.md  bozukdosyafix.md  emsal_karar.html  gpufix.md  kuralkartları.md  mevzubase.md  plan.md  proxy_test.py  proxylist.txt  qdrantresearch.md  qdrantresearch2.md  soru.txt  test_openai.py  yargitay_search.md  yargitay_search.py
legal-etl/: .env.example  README.md  nohup.out  petition_draft.txt  pyproject.toml  requirements.txt  rule_cards.ndjson  rule_cards_eser.ndjson  rule_cards_is.ndjson  rule_cards_kira.ndjson  rule_cards_nafaka.ndjson  rule_cards_tuketici.ndjson  state.db
legal-etl/cleaned/: yargitay_2011_clean.ndjson
legal-etl/docker/: docker-compose.yml
legal-etl/docker/airflow/: Dockerfile  requirements.txt
legal-etl/docker/opensearch/: opensearch-init.sh
legal-etl/docker/qdrant/: qdrant-init.py
legal-etl/docs/: INDEXING_AND_CHUNKING.md  INGEST_AYM_MEVZUAT.md  petitions.md
legal-etl/frontend/petition/: index.html
legal-etl/scripts/: clean_yargitay.py  enqueue_yargitay.py  petition_api.py  petition_demo.py  petition_web.py  playwright_auto.py  query_qdrant.py  rule_card_extractor.py  run_connector.py  run_yargitay_batch.py  yargitay_local_pipeline.py
legal-etl/src/connectors/: aym.py  base.py  bddk.py  danistay.py  emsal.py  kik.py  kvkk.py  mevzuat_mbs.py  playwright_session.py  rekabet.py  resmi_gazete.py  spk.py  yargitay(yedek).py  yargitay.py
legal-etl/src/core/: chunking.py  cleaners.py  decision_chunker.py  embed.py  http.py  index_bm25.py  legal.py  (+8 more)
legal-etl/tests/: test_connectors_smoke.py  test_petition_module.py
(+198 files in other folders)
